--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/preset-classic": "^2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "got": "^12.1.0",
     "nth-check": "^2.0.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
